--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "react-scripts": "5.0.1",
+    "react-icons": "^5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -28,5 +29,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0"
   }
 }
