--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "react192.png",
+      "src": "notass.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "react512.png",
+      "src": "notasb.png",
       "type": "image/png",
       "sizes": "512x512"
     }
