--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -31,6 +33,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.56.0"
-  }
+    "eslint": "^8.56.0",
+    "gh-pages": "^6.1.1"
+  },
+  "homepage": "https://amartana.github.io/curso-react-uno/"
 }
